add account activation

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,9 @@
       <h1>
         <%= gravatar_for @user %>
         <%= @user.name %>
+        <% if !@user.activated? %>
+          UNACTIVATED
+        <% end %>
       </h1>
     </section>
   </aside>
