--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,6 +1,6 @@
 <% args = url ? [@user, url: url] : @user %>
 <%= form_for(*args) do |f| %>
-  <%= render 'shared/error_messages', object: @user %>
+<%= render 'shared/error_messages', object: f.object %>
 
   <%= f.label :name %>
   <%= f.text_field :name, class: 'form-control' %>
